--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,4 @@
-.header{
+/*.header{
     background-color: #0097A7;
     color: #212121;
 }
@@ -28,4 +28,63 @@ h1
 }
 .list-group-item a{
     color:#0097A7;
+}*/
+.slider{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color:#F8BBD0;
+    z-index: -1;
+}
+nav{
+    display: grid;
+    grid-template-columns: 10% 1fr 1fr 10%;
+    min-height: 10vh;
+    color: white;
+    align-items: center;
+}
+#logo{
+    grid-column: 2/3;
+    font-size: 24px;
+}
+.hamburguer{
+   justify-self: end; 
+}
+section{
+    display: flex;
+    height: 80vh;
+    justify-content: center;
+    align-items: center;
+    background-color: #BDBDBD;
+}
+.hero{
+    height: 100%;
+    width: 100%;
+}
+.hero img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  
+}
+.headline{
+    position: absolute;
+    top: 70%;
+    left: 10%;
+    font-size: 100px;
+    transform: translate(-20%,-160%);
+    color: black;
+    z-index: 3;
+}
+.hero::after{
+    content: "";
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    opacity: 0.3;
 }
