--- a/estilos.css
+++ b/estilos.css
@@ -80,7 +80,7 @@ section{
 }
 .hero::after{
     content: "";
-    background-color: black;
+    background-color: white;
     width: 100%;
     height: 100%;
     top: 0;
