--- a/estilos.css
+++ b/estilos.css
@@ -57,11 +57,12 @@ section{
     height: 80vh;
     justify-content: center;
     align-items: center;
-    background-color: #BDBDBD;
+    background-color: #F8BBD0;
 }
 .hero{
     height: 100%;
     width: 100%;
+    position: relative;
 }
 .hero img{
     width: 100%;
@@ -74,12 +75,12 @@ section{
     top: 70%;
     left: 10%;
     font-size: 100px;
-    transform: translate(-20%,-160%);
+    transform: translate(-20%,-70%);
     color: black;
     z-index: 3;
 }
 .hero::after{
-    content: "";
+    content: " ";
     background-color: white;
     width: 100%;
     height: 100%;
