--- a/estilos.css
+++ b/estilos.css
@@ -35,7 +35,7 @@ h1
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color:#F8BBD0;
+    background-color: #0288D1;
     z-index: -1;
 }
 nav{
@@ -57,7 +57,7 @@ section{
     height: 80vh;
     justify-content: center;
     align-items: center;
-    background-color: #F8BBD0;
+   background-color: #03A9F4;
 }
 .hero{
     height: 100%;
@@ -89,3 +89,28 @@ section{
     position: absolute;
     opacity: 0.3;
 }
+ ul{
+    justify-self: end; 
+
+}
+.nav li{
+    list-style: none;
+
+}
+.nav ul li{
+   display: none;
+    position:absolute; /*posicion de acuedo al ul */
+    min-width: 140px;
+}
+
+.nav  ul li:click{
+    display: block;
+}
+.overflow {
+    -ms-flex: 1;
+    flex: 1;
+    padding-left: 3rem!important;
+    padding-right: 3rem!important;
+    overflow: hidden!important;
+}
+
