--- a/estilos.css
+++ b/estilos.css
@@ -66,7 +66,27 @@ section{
 }
 
 .imagenes{
-    background-image: url('./1.png');
+    background: url('./1.png');
+   
+    
   
+    
+
+    animation: slide 20s infinite;    
+    
 }
 
+@keyframes slide{
+    25%{
+        background: url('./1.png');
+    }
+    50%{
+        background: url('./2.png');
+    }
+    75%{
+        background: url('./3.PNG');
+    }
+    100%{
+        background: url('./4.PNG');
+    }
+}
