--- a/estilos.css
+++ b/estilos.css
@@ -1,88 +1,84 @@
-@media (max-width:361px){
-    .hero .headline{
-        font-size: 300%;
-       
-    }
+@media (max-width: 361px) {
+  .hero .headline {
+    font-size: 300%;
+  }
 }
-.slider{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #0288D1;
-    z-index: -1;
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #0288d1;
+  z-index: -1;
 }
-nav{
-    display: grid;
-    grid-template-columns: 10% 1fr 1fr 10%;
-    min-height: 10vh;
-    color: white;
-    align-items: center;
+nav {
+  display: grid;
+  grid-template-columns: 10% 1fr 1fr 10%;
+  min-height: 10vh;
+  color: white;
+  align-items: center;
 }
-#logo{
-    grid-column: 2/3;
-    font-size: 24px;
+#logo {
+  grid-column: 2/3;
+  font-size: 24px;
 }
-.hamburguer{
-   justify-self: end; 
+.hamburguer {
+  justify-self: end;
 }
-section{
-    display: flex;
-    height: 80vh;
-    justify-content: center;
-    align-items: center;
-   background-color: #03A9F4;
+section {
+  display: flex;
+  height: 80vh;
+  justify-content: center;
+  align-items: center;
+  background-color: #03a9f4;
 }
-.hero{
-    height: 100%;
-    width: 100%;
-    position: relative;
+.hero {
+  height: 100%;
+  width: 100%;
+  position: relative;
 }
-.hero img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  
+.hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.headline{
-    position: absolute;
-    top: 70%;
-    left: 10%;
-    font-size: 100px;
-    transform: translate(-20%,-70%);
-    color: black;
-    z-index: 3;
+.headline {
+  position: absolute;
+  top: 70%;
+  left: 10%;
+  font-size: 100px;
+  transform: translate(-20%, -70%);
+  color: black;
+  z-index: 3;
 }
-.hero::after{
-    content: " ";
-    background-color: white;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-    opacity: 0.3;
+.hero::after {
+  content: " ";
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0.3;
 }
 
-.imagenes{
-    background: url('./1.png');
-
-    animation: slide 10s infinite;    
-    
+.imagenes {
+  background: url("./1.png");
+  animation: slide 10s infinite;
 }
 
-@keyframes slide{
-    25%{
-        background: url('./1.png');
-    }
-    50%{
-        background: url('./2.png');
-    }
-    75%{
-        background: url('./3.PNG');
-    }
-    100%{
-        background: url('./4.PNG');
-    }
+@keyframes slide {
+  25% {
+    background: url("./1.png");
+  }
+  50% {
+    background: url("./2.png");
+  }
+  75% {
+    background: url("./3.PNG");
+  }
+  100% {
+    background: url("./4.PNG");
+  }
 }
